--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -17,3 +17,4 @@
 "email_is_busy" = "Электронная почта уже используется";
 "email_is_empty" = "Некорректный формат";
 "password_is_short" = "Слишком короткий пароль";
+"success" = "Ура!";
