--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -20,5 +20,10 @@
 "email_is_empty" = "Email is incorrect";
 "password_is_short" = "Password is too short";
 "success" = "Success!";
+"provider_authorization_progress" = "Authorization";
+"provider_authorization_success" = "Success";
+"provider_authorization_failure" = "Error";
+
+
 
 
