--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "email_is_empty" = "Некорректный формат";
 "password_is_short" = "Слишком короткий пароль";
 "success" = "Ура!";
+"provider_authorization_progress" = "Авторизация";
+"provider_authorization_success" = "Успех!";
+"provider_authorization_failure" = "Ошибка";
