--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -6,12 +6,18 @@
   Copyright © 2022 Pavel Bukharov. All rights reserved.
 */
 
+//Common
+"ok" = "Ok";
+"check_fields" = "Check fields for errors";
+"warning" = "Warning";
+"error" = "Error";
+
 //Welcome VC
 "get_started" = "Get started!";
 //Signup VC
 "continue_with_provider" = "or continue with";
 "already_registered" = "Already have account?";
-"login" = "Login";
+"log_in" = "Log in";
 "sign_up" = "Sign up";
 "username_is_busy" = "Username is already used";
 "username_is_empty" = "Username is not filled";
@@ -24,6 +30,14 @@
 "provider_authorization_success" = "Success";
 "provider_authorization_failure" = "Error";
 "timeout_error" = "Timeout exceeded";
-
-
-
+//Conditions VC
+"accept" = "Accept";
+"refuse" = "Don't accept";
+"terms_of_use" = "Terms of use";
+"should_read_agreement_title" = "Warning";
+"should_read_agreement_message" = "Please, carefully read terms of use to the end";
+"wait_for_agreement" = "Please, wait. Agreement is loading";
+//Conditions VC
+"log_in_title" = "Log in";
+//Login VC
+"log_in_error" = "Please, check credentials and try again";
