--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -6,19 +6,38 @@
   Copyright © 2022 Pavel Bukharov. All rights reserved.
 */
 
+//Common
+"ok" = "Хорошо";
+"check_fields" = "Проверьте корректность заполненных полей";
+"warning" = "Внимание";
+"error" = "Ошибка";
+
+//Welcome VC
 "get_started" = "Начать!";
+//Signup VC
 "continue_with_provider" = "или продолжить с";
 "already_registered" = "Уже зарегистрированы?";
-"login" = "Войти";
+"log_in" = "Войти";
 "sign_up" = "Создать аккаунт";
 "username_is_busy" = "Пользователь существует";
 "username_is_empty" = "Поле пустое";
 "username_is_short" = "Недостаточно символов";
 "email_is_busy" = "Электронная почта уже используется";
-"email_is_empty" = "Некорректный формат";
+"email_is_empty" = "Некорректный формат почты";
 "password_is_short" = "Слишком короткий пароль";
 "success" = "Ура!";
 "provider_authorization_progress" = "Авторизация";
 "provider_authorization_success" = "Успех!";
 "provider_authorization_failure" = "Ошибка";
 "timeout_error" = "Превышено время ожидания";
+//Conditions VC
+"accept" = "Принимаю";
+"refuse" = "Отказываюсь";
+"terms_of_use" = "Соглашение";
+"should_read_agreement_title" = "Внимание";
+"should_read_agreement_message" = "Пожалуйста, прочитайте пользовательское соглашение до конца";
+"wait_for_agreement" = "Пожалуйста, дождитесь загрузки лицензионного соглашения";
+//Conditions VC
+"log_in_title" = "Вход";
+//Login VC
+"log_in_error" = "Пожалуйста, проверьте правильность данных для входа и попробуйте снова";
