--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -11,8 +11,12 @@
 "check_fields" = "Check fields for errors";
 "warning" = "Warning";
 "error" = "Error";
+"send" = "Send";
+"select" = "Select";
+"cancel" = "Cancel";
 
 //Welcome VC
+"welcome" = "Welcome to ThinkWhat!";
 "get_started" = "Get started!";
 //Signup VC
 "continue_with_provider" = "or continue with";
@@ -38,6 +42,10 @@
 "should_read_agreement_message" = "Please, carefully read terms of use to the end";
 "wait_for_agreement" = "Please, wait. Agreement is loading";
 //Conditions VC
-"log_in_title" = "Log in";
+"log_in_title" = "Account log in";
 //Login VC
 "log_in_error" = "Please, check credentials and try again";
+"recover_label" = "Forgot username or password?";
+"recover_button" = "Recover";
+//Recover VC
+"recover_title" = "Account recovery";
