--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -22,6 +22,8 @@
 "save" = "Сохранить";
 "camera" = "Камера";
 "photo_album" = "Фотоальбом";
+"api_unavailable" = "Сервер временно недоступен, попробуйте позже";
+"retry" = "Повторить";
 
 //Welcome VC
 "welcomeLabel" = "Добро пожаловать в ThinkWhat!";
@@ -65,7 +67,7 @@
 "recover_title" = "Восстановление аккаунта";
 
 //Recover VC
-"profile_fill" = "Ваш профиль";
+"profile_fill" = "Заполните профиль";
 "email_sent" = "Электронное письмо со ссылкой для восстановления было отправлено";
 "email_not_found" = "Указанный адрес электронной почты не найден. Проверьте корректность или попробуйте другой";
 
