--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -8,6 +8,7 @@
 
 //Common
 "ok" = "Хорошо";
+"more" = "еще";
 "results" = "Результат";
 "vote" = "Голосовать";
 "check_fields" = "Проверьте корректность заполненных полей";
@@ -33,6 +34,8 @@
 "bad_url" = "Нерабочая ссылка";
 "claim_sent" = "Жалоба отправлена";
 "thanks_for_feedback" = "Спасибо за обратную поддержку!";
+"congratulations" = "Поздравляем!";
+
 
 //Welcome VC
 "welcomeLabel" = "Добро пожаловать в ThinkWhat!";
@@ -107,3 +110,11 @@
 //Poll VC
 "make_choice" = "Выберите вариант ответа";
 "finish_poll" = "Пожалуйста, сначала пройдите опрос";
+"no_votes" = "Голосов нет";
+"poll_complete_at" = "Опрос выполнен на";
+"voted" = "Проголосовали";
+"most_popular_choice" = "Выбранный Вами ответ является самым популярным!";
+"extra_points" = "Мы пополнили ваш баланс на ";
+"points" = " голоса";
+"support_poll" = "Поддержать опрос";
+"next" = "Следующий";
