--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -89,11 +89,11 @@
 "recoverButton" = "Восстановить";
 //Recover VC
 "recover_title" = "Восстановление аккаунта";
+"email_sent" = "Электронное письмо со ссылкой для восстановления было отправлено";
+"email_not_found" = "Указанный адрес электронной почты не найден. Проверьте корректность или попробуйте другой";
 
 //Recover VC
 "profile_fill" = "Заполните профиль";
-"email_sent" = "Электронное письмо со ссылкой для восстановления было отправлено";
-"email_not_found" = "Указанный адрес электронной почты не найден. Проверьте корректность или попробуйте другой";
 
 //FillProfile VC
 "firstNameTF" = "Имя";
@@ -111,6 +111,9 @@
 
 //List VC
 "list" = "Лента";
+"top" = "Популярные";
+"new" = "Новые";
+"watching" = "Слежу";
 
 //Topics VC
 "topics" = "Темы";
