--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -48,6 +48,7 @@
 "anonymous" = "Анонимный";
 "user" = "Пользователь";
 "votes" = "голосов";
+"publications" = "Публикаций";
 
 
 //Welcome VC
@@ -111,7 +112,8 @@
 
 //List VC
 "list" = "Лента";
-"top" = "Популярные";
+"own" = "Мои";
+"top" = "Топ";
 "new" = "Новые";
 "watching" = "Слежу";
 
