Settings VC in progress

--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -50,6 +50,8 @@
 "votes" = "votes";
 "publications" = "Publications";
 "search" = "Поиск";
+"profile" = "Profile";
+"edit" = "Edit";
 
 
 //Welcome VC
