--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -50,6 +50,8 @@
 "votes" = "голосов";
 "publications" = "Публикаций";
 "search" = "Поиск";
+"profile" = "Профиль";
+"edit" = "Изменить";
 
 
 //Welcome VC
