--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -53,6 +53,9 @@
 "search" = "Поиск";
 "profile" = "Профиль";
 "edit" = "Изменить";
+"progress" = "Прогресс";
+"people_voted" = "человек";
+
 
 
 //Welcome VC
