--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -17,6 +17,7 @@
 "maximum_characters_exceeded" = "Превышено максимальное количество: ";
 "minimum_characters_needed" = "Минимальное количество симоволов: ";
 "invalid_url" = "Некорректный формат ссылки";
+"images_limit" = "Вы можете прикрепить не более 3-х изображений";
 
 //Common
 "ok" = "Хорошо";
@@ -35,7 +36,7 @@
 "continueButton" = "Продолжить";
 "save" = "Сохранить";
 "camera" = "Камера";
-"photo_album" = "Фотоальбом";
+"photo_album" = "Альбом";
 "api_unavailable" = "Сервер временно недоступен, попробуйте позже";
 "retry" = "Повторить";
 "more_info" = "Подробнee";
@@ -190,3 +191,8 @@
 "private_description" = "Частный опрос, доступ предоставляется по ссылке";
 
 "url_placeholder" = "Вставьте ссылку";
+"choose_image" = "Выберите изображение";
+"edit_image" = "Изменить изображение";
+
+"total_images" = " изображений";
+
