--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -18,6 +18,7 @@
 "minimum_characters_needed" = "Минимальное количество симоволов: ";
 "invalid_url" = "Некорректный формат ссылки";
 "images_limit" = "Вы можете прикрепить не более 3-х изображений";
+"minimum_choices" = "Необходимо минимум 2 варианта";
 
 //Common
 "ok" = "Хорошо";
@@ -199,3 +200,6 @@
 "total" = "Всего";
 "new_choice" = "Введите текст";
 "edit_choice" = "Вариант";
+"are_on" = "Включены";
+"are_off" = "Выключены";
+
