--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -174,7 +174,7 @@
 "topic" = "Раздел";
 "options" = "Опции";
 "poll_title" = "Название";
-"poll_description" = "Описание";
+"poll_description" = "Детали";
 "poll_question" = "Вопрос";
 "url" = "Ссылка";
 "images" = "Изображения";
@@ -192,6 +192,7 @@
 "default_description" = "Публичный опрос, участвовать могут все, не анонимный";
 "private_option" = "Частный";
 "private_description" = "Частный опрос, доступ предоставляется по ссылке";
+"ask_question" = "Сформулируйте вопрос";
 
 "url_placeholder" = "Вставьте ссылку";
 "choose_image" = "Выберите изображение";
@@ -210,3 +211,9 @@
 "hot_is_on_description" = "Опрос гарантированно попадет в список Горячих, будут списаны дополнительные баллы";
 "hot_is_off_description" = "Опрос может попасть в список Горячих, если его рейтинг будет выше 4 звезд";
 "post_poll" = "Опубликовать";
+"optional" = "Опционально";
+"open_safari" = "Открыть браузер";
+"open_hyperlink" = "Открыть ссылку";
+"limits_description" = "Количество участников опроса, при достижении которого опрос завершается";
+"comments_on_description" = "Проголосовавшие пользователи могут оставлять комментарии";
+"comments_off_description" = "Комментарии закрыты";
